# zfs

./: configure.ac
cmd/: Makefile.am
cmd/uzfsd/: .gitignore  Makefile.am  uzfsd.c
cmd/zdb/: zdb.c
cmd/zfsd/: Makefile.am  zfsd.c
cmd/zpool/: zpool_main.c
debian/: zfsutils-linux.install
include/: libzfs.h  libzfs_core.h  zfeature_common.h
include/os/freebsd/spl/sys/: proc.h
include/os/linux/spl/sys/: kmem_cache.h
include/os/linux/zfs/sys/: trace_arc.h
include/sys/: spa.h  vdev_impl.h  zfs_context.h  zfs_ioctl.h  zfs_ioctl_impl.h  zthr.h
include/sys/fs/: zfs.h
lib/: Makefile.am
lib/libuzfs/: Makefile.am  uzfs.c
lib/libzfs/: libzfs_dataset.c  libzfs_pool.c  libzfs_util.c
lib/libzfs/os/linux/: libzfs_util_os.c
lib/libzfs_core/: libzfs_core.c
lib/libzpool/: Makefile.am  kernel.c  zfs_user_ioctl.c
man/man5/: zpool-features.5
man/man8/: Makefile.am  zpool-noalloc.8  zpool.8
module/os/linux/spl/: spl-kmem-cache.c  spl-proc.c
module/os/linux/zfs/: arc_os.c  zvol_os.c
module/zcommon/: zfeature_common.c  zfs_namecheck.c
module/zfs/: arc.c  dbuf.c  dnode.c  dsl_pool.c  spa.c  spa_checkpoint.c  vdev.c  vdev_indirect.c  vdev_indirect_births.c  vdev_indirect_mapping.c  vdev_removal.c  zfs_ioctl.c  zthr.c
serapheim/: install_syscall_intercept.sh  run_uzfs_driver.sh
